--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body {
   justify-content: space-between;
 }
 
-.header .main .footer {
+.header, .main, .footer {
     border: 2px solid red;
 }
 
