--- a/style.css
+++ b/style.css
@@ -49,6 +49,25 @@ body {
   font-weight: bold;
 }
 
+.main-container {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.section {
+  width: 50%;
+}
+
+@media (max-width: 768px) {
+  .section {
+    width: 100%;
+  }
+}
+
+.section-profile {
+  width: 100%;
+}
+
 .image {
   max-width: fit-content;
 }
