--- a/style.css
+++ b/style.css
@@ -150,6 +150,10 @@ body {
   padding-left: 0;
 }
 
+.main-link {
+  color: #5e0d0d;
+}
+
 .footer {
   display: flex;
   justify-content: space-between;
